--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -7,6 +7,10 @@
 @import 'homeResponsive';
 @import 'access';
 @import 'accessResponsive';
+@import 'productList';
+@import 'productListResponsive';
+@import 'addProduct';
+@import 'addProductResponsive';
 
 
 html{
