--- a/src/styles/_homeResponsive.scss
+++ b/src/styles/_homeResponsive.scss
@@ -77,9 +77,12 @@
       }
       
     }
-    .stock__category__card{
-      grid-column: span 3;
-      font-size: 1rem;
+  }
+  .stock__category__card{
+    grid-column: span 3;
+    font-size: 1rem;
+    &__discount{
+      font-size: 0.8rem;
     }
   }
 }
@@ -181,7 +184,7 @@
   }
   .stock__category__card{
     grid-column: span 2;
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     &__actions>img{
       height: 1.5rem;
     }
