--- a/src/styles/_productList.scss
+++ b/src/styles/_productList.scss
@@ -73,6 +73,23 @@
           border-radius: 50%;
         }
       }
+      &__add{
+        background-color: changeOpacity($colSecondary,0.5);
+        height: 100%;
+        display: grid;
+        place-items: center;
+        border-radius: 1rem;
+        box-shadow: 0 0 16px 5px rgba(0, 0, 0, 0.6);
+        a{
+          @include transitionFast;
+        }
+        &:hover>a{
+          animation: zoom 1s infinite;
+        }
+        &:hover{
+          box-shadow: none;
+        }
+      }
       &:hover{
         box-shadow: 0px 2px 10px -1px black;
         background-color: $colSecondary;
@@ -83,5 +100,19 @@
         display: flex;
       }
     }
+  }
+}
+@keyframes zoom {
+  0%{
+    transform: scale(1.3);
+    opacity: 1;
+  }
+  50%{
+    transform: scale(0.8);
+    opacity: 0.5;
+  }
+  100%{
+    transform: scale(1.3);
+    opacity: 1;
   }
 }
