finished pages home, detail, products and CRUD

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -11,6 +11,8 @@
 @import 'productListResponsive';
 @import 'addProduct';
 @import 'addProductResponsive';
+@import 'productDetail';
+@import 'productDetailResponsive';
 
 
 html{
