--- a/src/styles/_productList.scss
+++ b/src/styles/_productList.scss
@@ -84,7 +84,7 @@
           @include transitionFast;
         }
         &:hover>a{
-          animation: zoom 1s infinite;
+          animation: bear 1s infinite;
         }
         &:hover{
           box-shadow: none;
@@ -102,7 +102,7 @@
     }
   }
 }
-@keyframes zoom {
+@keyframes bear {
   0%{
     transform: scale(1.3);
     opacity: 1;
