--- a/src/styles/_stockProducts.scss
+++ b/src/styles/_stockProducts.scss
@@ -83,10 +83,13 @@
         background-color: $colThird;
         color: $bgColor;
         border-radius: 50%;
-        // right: 0;
         z-index: 2;
         padding: 5px;
         font-size: 0.5rem;
+        object-fit: cover;
+        aspect-ratio: 1/1;
+        display: grid;
+        place-items: center;
       }
       &:hover{
         box-shadow: 0px 2px 2px -1px black;
