--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -341,6 +341,11 @@
   z-index: 2;
   padding: 5px;
   font-size: 0.5rem;
+  -o-object-fit: cover;
+     object-fit: cover;
+  aspect-ratio: 1/1;
+  display: grid;
+  place-items: center;
 }
 .stock__category__card:hover {
   box-shadow: 0px 2px 2px -1px black;
@@ -996,7 +1001,7 @@
   transition: all ease-in-out 0.3s;
 }
 .product__box__card__add:hover > a {
-  animation: zoom 1s infinite;
+  animation: bear 1s infinite;
 }
 .product__box__card__add:hover {
   box-shadow: none;
@@ -1011,7 +1016,7 @@
   display: flex;
 }
 
-@keyframes zoom {
+@keyframes bear {
   0% {
     transform: scale(1.3);
     opacity: 1;
@@ -1166,6 +1171,139 @@
   .addProd__form__btn {
     justify-self: center;
     width: 50%;
+  }
+}
+.detail {
+  display: flex;
+  flex-direction: column;
+}
+.detail > * {
+  margin-bottom: 1rem;
+}
+.detail__profile {
+  position: relative;
+  overflow: hidden;
+}
+.detail__profile__discount {
+  position: absolute;
+  top: 10%;
+  right: 5%;
+  display: grid;
+  place-items: center;
+  background-color: #862B0D;
+  border-radius: 50%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  aspect-ratio: 1/1;
+  padding: 4px;
+  font-size: 0.5rem;
+  font-weight: bolder;
+  color: #F7F1E5;
+}
+.detail__info h3 {
+  text-align: center;
+  font-weight: bolder;
+  margin-bottom: 1rem;
+  text-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
+}
+@media screen and (min-width: 1000px) {
+  .detail__info h3 {
+    font-size: 2.5rem;
+  }
+}
+.detail__info p {
+  padding-inline: 1rem;
+  display: flex;
+  align-items: center;
+}
+.detail__info p img {
+  height: 1rem;
+  margin-right: 0.5rem;
+}
+.detail__info__price {
+  text-decoration: line-through;
+  margin-right: 0.5rem;
+  color: rgba(134, 43, 13, 0.5);
+}
+.detail__info__priceActual {
+  color: #862B0D;
+  font-weight: bolder;
+}
+.detail__info__stock {
+  margin-right: 0.2rem;
+}
+.detail__info__category {
+  margin-left: 0.2rem;
+}
+.detail__info__actions {
+  padding-block: 0.5rem;
+}
+.detail__info__actions__delete {
+  background-color: #862B0D;
+  font-size: 0.7rem;
+  padding-inline: 0.5rem;
+  padding-block: 0.2rem;
+  border-radius: 1rem;
+  color: #F7F1E5;
+  cursor: pointer;
+  transition: all ease-in-out 0.3s;
+  margin-inline: 1rem;
+}
+@media screen and (min-width: 1000px) {
+  .detail__info__actions__delete {
+    font-size: 1rem;
+  }
+}
+.detail__info__actions__update {
+  background-color: #E7B10A;
+  font-size: 0.7rem;
+  padding-inline: 0.5rem;
+  padding-block: 0.2rem;
+  border-radius: 1rem;
+  color: #F7F1E5;
+  cursor: pointer;
+  transition: all ease-in-out 0.3s;
+  margin-inline: 1rem;
+}
+@media screen and (min-width: 1000px) {
+  .detail__info__actions__update {
+    font-size: 1rem;
+  }
+}
+.detail__info__actions > *:hover {
+  transform: translateY(-4px) scale(1.1);
+  box-shadow: 0 5px 10px -2px rgba(0, 0, 0, 0.7);
+}
+.detail__info h4 {
+  padding-inline: 1rem;
+  margin-bottom: 1rem;
+}
+.detail__info__description {
+  text-align: justify;
+}
+
+@media screen and (min-width: 600px) {
+  .detail__profile__discount {
+    font-size: 1rem;
+  }
+}
+@media screen and (min-width: 870px) {
+  .detail__profile__discount {
+    font-size: 1.3rem;
+  }
+}
+@media screen and (min-width: 1000px) {
+  .detail {
+    flex-direction: row;
+  }
+  .detail__info {
+    max-width: 50%;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .detail__info {
+    padding-left: 2rem;
+    font-size: 1.5rem;
   }
 }
 html {
