--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -13,6 +13,8 @@
 @import 'addProductResponsive';
 @import 'productDetail';
 @import 'productDetailResponsive';
+@import 'account';
+@import 'accountResponsive';
 
 
 html{
