--- a/src/styles/_access.scss
+++ b/src/styles/_access.scss
@@ -61,6 +61,14 @@
       @extend .access__Login__form;
       &__input{
         @extend .access__Login__form__input;
+        &__eye{
+          position: absolute;
+          right: 5px;
+          aspect-ratio: 1/1;
+          max-height: 1rem;
+          top: 45%;
+          cursor: pointer;
+        }
       }
       &__btn{
         @extend .access__Login__form__btn;
