--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -15,7 +15,7 @@
 @import 'productDetailResponsive';
 @import 'account';
 @import 'accountResponsive';
-
+@import 'about';
 
 html{
   scroll-behavior: smooth;
