--- a/src/styles/_productList.scss
+++ b/src/styles/_productList.scss
@@ -34,6 +34,7 @@
           top: 0;
           left: 0;
           width: 100%;
+          height: 100%;
           padding-inline: 20%;
           background-color: $bgColor;
         }
