--- a/src/styles/_stockProducts.scss
+++ b/src/styles/_stockProducts.scss
@@ -39,6 +39,7 @@
           top: 0;
           left: 0;
           width: 100%;
+          height: 100%;
           padding-inline: 20%;
           background-color: $bgColor;
         }
