--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -293,6 +293,7 @@
   top: 0;
   left: 0;
   width: 100%;
+  height: 100%;
   padding-inline: 20%;
   background-color: #F7F1E5;
 }
@@ -966,6 +967,7 @@
   top: 0;
   left: 0;
   width: 100%;
+  height: 100%;
   padding-inline: 20%;
   background-color: #F7F1E5;
 }
