--- a/src/styles/_menu.scss
+++ b/src/styles/_menu.scss
@@ -105,6 +105,31 @@
           background-color: $bgColor;
         }
       }
+      &__results{
+        font-size: 0.5rem;
+        position: absolute;
+        background-color: changeOpacity($bgColor,0.5);
+        backdrop-filter: blur(5px);
+        top: 110%;
+        left: 10%;
+        z-index: 3;
+        @include transitionFast;
+        border-radius: 0.5rem;
+        max-height: 0px;
+        overflow: hidden;
+        &__card{
+          display: flex;
+          align-items: center;
+          border-bottom: 1px $colPrice solid;
+          @include transitionFast;
+          img{
+            aspect-ratio: 1/1;
+          }
+          &:hover{
+            background: linear-gradient(to right, $colSecondary, changeOpacity($colPrice, 0.6));
+          }
+        }
+      }
     }
   }
   /* ---------------------------------------------login button */
