--- a/src/styles/_productList.scss
+++ b/src/styles/_productList.scss
@@ -19,7 +19,9 @@
       display: flex;
       flex-direction: column;
       cursor: pointer;
-      @include transitionFast;
+      @include transitionSlow;
+      opacity: 0;
+      scale: 25%;
       &__photo{
         position: relative;
         // width: 100%;
@@ -116,4 +118,9 @@
     transform: scale(1.3);
     opacity: 1;
   }
+}
+
+.appear{
+  opacity: 1;
+  scale: 100%;
 }
